0.8.0/_sources/gallery/add_3D_image.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_3D_image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_3D_image.py:


Add 3D image
============

Display a 3D image layer using the :meth:`add_image` API.

.. tags:: visualization-nD, layers

.. GENERATED FROM PYTHON SOURCE LINES 9-23



.. image-sg:: /gallery/images/sphx_glr_add_3D_image_001.png
   :alt: add 3D image
   :srcset: /gallery/images/sphx_glr_add_3D_image_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    from skimage import data

    import napari

    blobs = data.binary_blobs(length=64, volume_fraction=0.1, n_dim=3).astype(
        float
    )
    viewer = napari.Viewer(ndisplay=3)
    # add the volume
    viewer.add_image(blobs, scale=[3, 1, 1])

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_3D_image.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_3D_image.ipynb <add_3D_image.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_3D_image.py <add_3D_image.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: add_3D_image.zip <add_3D_image.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
